--- a/NetBank.UI.Mobile/Pages/DetalhesContaPage.xaml
+++ b/NetBank.UI.Mobile/Pages/DetalhesContaPage.xaml
@@ -14,6 +14,13 @@
         </StackLayout>
 
         <StackLayout Padding="20">
+            <FlexLayout JustifyContent="SpaceAround" HorizontalOptions="FillAndExpand">
+                <Button x:Name="btnNovaTransacao" Clicked="btnNovaTransacao_Clicked" Text="Tranferir" />
+                <Button Text="Pagar Boleto" />
+            </FlexLayout>
+        </StackLayout>
+
+        <StackLayout Padding="20">
             <StackLayout>
                 <Label Text="Data Inicial" />
                 <DatePicker x:Name="datePickerDataInicial" />
@@ -28,6 +35,7 @@
         </StackLayout>
 
         <StackLayout Padding="20">
+            <Label Text="Seu Extrato:" FontSize="20" Padding="10" FontAttributes="Bold" />
             <ListView HasUnevenRows="True" SelectionMode="None" x:Name="listTransacoes">
                 <ListView.ItemTemplate>
                     <DataTemplate>
