feat: inputs - configurado corretamente o tipo de teclado e e de inout das telas de login e cadastro

--- a/NetBank.UI.Mobile/Pages/CadastroPage.xaml
+++ b/NetBank.UI.Mobile/Pages/CadastroPage.xaml
@@ -22,10 +22,12 @@
                     x:Name="entryEmail"
                     Margin="10"/>
                 <Entry
+                    Keyboard="Numeric"
                     Placeholder="Insira seu Telefone"
                     x:Name="entryTelefone"
                     Margin="10"/>
                 <Entry
+                    Keyboard="Numeric"
                     Placeholder="Insira seu CPF"
                     x:Name="entryCPF"
                     Margin="10"/>
@@ -33,10 +35,12 @@
                     x:Name="datePickerDataNascimento"
                     Margin="10"/>
                 <Entry 
+                    IsPassword="True"
                     Placeholder="Insira sua senha"
                     x:Name="entrySenha"
                     Margin="10"/>
                 <Entry
+                    IsPassword="True"
                     Placeholder="Confirmação de senha"
                     x:Name="entryConfirmacaoSenha"
                     Margin="10"/>
