aplicativo new maui - trocado cores do aplicativo

--- a/NetBank.UI.Mobile/Pages/DetalhesContaPage.xaml
+++ b/NetBank.UI.Mobile/Pages/DetalhesContaPage.xaml
@@ -5,7 +5,7 @@
              Title="Conta">
     <ScrollView>
         <VerticalStackLayout>
-            <StackLayout BackgroundColor="#512BD4" Padding="20">
+            <StackLayout BackgroundColor="{StaticResource Primary}" Padding="20">
                 <Label Text="Valor em conta:" TextColor="White" />
                 <Label 
                     x:Name="lblValorEmConta"
